[tool.poetry]
name = "bk-login"
version = "2.3.3"
description = "bk-login"
authors = ["IMBlues <bluesedenyu@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.14"
django = "3.2.13"
django-braces = "1.13.0"
dj-static = "0.0.6"
pycrypto = "2.6.1"
requests = "2.21.0"
pymysql = "1.0.2"
gunicorn = "19.9.0"
xlrd = "1.0.0"
xlwt = "1.1.2"
gevent = "21.1.2"
pytz = "2016.6.1"
python-dateutil = "2.8.1"
cachetools = "3.1.1"
django-environ = "0.4.5"
django-prometheus = "1.0.15"
blue-krill = "^1.0.7"
python-json-logger = "^2.0.2"
sentry-sdk = "1.5.6"
django-decorator-include = "^3.0"
werkzeug = "2.0.3"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"
# black
black = "^21.7b0"
# isort
isort = "^5.9.2"
# flake8
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-comprehensions = "^3.5.0"
# pytest
pytest = "^6.2.4"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
# mypy
mypy = "^v0.910"



[[tool.poetry.source]]
name = "tencent-mirrors"
url = "https://mirrors.tencent.com/pypi/simple/"

