[tool.poetry]
name = "bk-login"
version = "2.3.3"
description = "bk-login"
authors = ["TencentBlueKing <contactus_bk@tencent.com>"]

[tool.poetry.dependencies]
python = "3.11.10"
Django = "4.2.17"
django-braces = "1.16.0"
dj-static = "0.0.6"
requests = "2.32.3"
pymysql = "1.1.1"
gunicorn = "23.0.0"
xlrd = "2.0.1"
xlwt = "1.3.0"
gevent = "24.11.1"
pytz = "2024.2"
python-dateutil = "2.9.0"
cachetools = "5.5.0"
django-environ = "0.11.2"
django-prometheus = "2.3.1"
blue-krill = "2.0.7"
python-json-logger = "2.0.7"
sentry-sdk = "2.19.2"
werkzeug = "2.3.8"
rsa = "^4.9"
opentelemetry-api = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-exporter-otlp = "1.25.0"
opentelemetry-instrumentation-django = "0.46b0"
opentelemetry-instrumentation-dbapi = "0.46b0"
opentelemetry-instrumentation-redis = "0.46b0"
opentelemetry-instrumentation-requests = "0.46b0"
opentelemetry-instrumentation-celery = "0.46b0"
opentelemetry-instrumentation-logging = "0.46b0"
opentelemetry-exporter-jaeger = "1.21.0"
bk-iam = "1.3.6"
pycryptodome = "3.21.0"
concurrent-log-handler = "^0.9.25"

[tool.poetry.dev-dependencies]
ipython = "^8.30.0"
# black
black = "^24.8.0"
# isort
isort = "^5.13.2"
# flake8
pyproject-flake8 = "^7.0.0"
flake8-comprehensions = "3.16.0"
# pytest
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
# mypy
mypy = "^1.10.1"

