[tool.poetry]
name = "bk-user-saas"
version = "2.3.3"
description = "bk-user SaaS"
authors = ["TencentBlueKing <contactus_bk@tencent.com>"]

[tool.poetry.dependencies]
python = "3.11.10"
urllib3 = "^2.2.3"
djangorestframework = "3.15.2"
PyMySQL = "1.1.1"
six = "1.17.0"
pytz = "2024.2"
certifi = "^2024.8.30"
requests = "^2.32.3"
aenum = "3.1.13"
whitenoise = "6.8.2"
Django = "4.2.17"
gunicorn = "23.0.0"
gevent = "24.11.1"
django-cors-headers = "^4.6.0"
python-json-logger = "2.0.7"
raven = "6.10.0"
pydantic = "2.6.4"
semantic-version = "^2.10.0"
pyyaml = "^6.0.0"
django-environ = "0.11.2"
django-prometheus = "2.3.1"
sentry-sdk = "1.43.0"
werkzeug = "2.3.8"
packaging = "24.2"
pyparsing = "3.2.0"
opentelemetry-api = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-exporter-otlp = "1.25.0"
opentelemetry-instrumentation-django = "0.46b0"
opentelemetry-instrumentation-dbapi = "0.46b0"
opentelemetry-instrumentation-redis = "0.46b0"
opentelemetry-instrumentation-requests = "0.46b0"
opentelemetry-instrumentation-celery = "0.46b0"
opentelemetry-instrumentation-logging = "0.46b0"
opentelemetry-exporter-jaeger = "1.21.0"
cffi = "1.17.1"
concurrent-log-handler = "^0.9.25"

[tool.poetry.dev-dependencies]
ipython = "^8.30"
# black
black = "^24.8.0"
# isort
isort = "^5.13.2"
# flake8
pyproject-flake8 = "^7.0.0"
flake8-comprehensions = "3.16.0"
# pytest
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
# mypy
mypy = "1.10.1"
types-requests = "^2.31.0.1"
types-dataclasses = "^0.6.6"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bkuser_shell.config.overlays.dev"
